fix(styles): horizontal overflow

--- a/src/_includes/styles/app/globals/layout.css
+++ b/src/_includes/styles/app/globals/layout.css
@@ -170,12 +170,12 @@
 }
 
 .content .navigation {
-	margin-inline: var(--app-offset-media);
+	padding-inline: 0;
 }
 
 @media screen and (min-width: 768px) {
 	.content .navigation {
-		margin-inline: auto;
+		padding-inline: var(--app-offset);
 	}
 }
 
